--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div id ="container">
 		<div id = "box">
 			<h1>Walking Dead Trivia!!!</h1><br>
-			<div id ="Buttons"><button id = "begin">Start</button><button id="submit">Submit</button><button id="restart">Restart</button></div>
+			<div id ="Buttons"><button id = "begin">Start</button><button id="submittop" class = "submit">Submit</button><button id="restart">Restart</button></div>
 			
 
 			<div id ="main">
@@ -129,7 +129,7 @@
 							<br>
 					</div>
 					
-					
+					<button id="submittop" class = "submit">Submit</button>
 
 
 				</div>
