working Trivia Game

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 	<div id ="container">
 		<div id = "box">
 			<h1>Walking Dead Trivia!!!</h1><br>
-			<div id ="Buttons"><button id = "begin">Start</button><button id="submittop" class = "submit">Submit</button><button id="restart">Restart</button></div>
+			<div id ="Buttons"><button class ="btn" id = "begin">Start</button><button id="submittop" class = "submit btn">Submit</button><button class = "btn" id="restart">Restart</button></div>
 			
 
 			<div id ="main">
 				
 				<div id = "quiz">
 					<div id = "displayTimer"></div>
-
+					<br>
 					<div id = "shane1">
 						<h3>1. Who let all the walkers out of the Greene's barn?</h3><br>
 							<form>
@@ -129,7 +129,7 @@
 							<br>
 					</div>
 					
-					<button id="submittop" class = "submit">Submit</button>
+					<button id="submitbtm" class = "submit btn">Submit</button>
 
 
 				</div>
