--- a/index.html
+++ b/index.html
@@ -139,25 +139,25 @@
 			<br>
 			<div id = "answers">
 				<p>1.Who lets all the walkers out of the Greene’s barn?<br>
-						Shane<br>
-					2.Who does rick hallucinate during the attack on Woodbury.<br>
-						Shane<br>
-					3.Who were Michonne’s walker pets<br>
-						Her boyfriend and his friend<br>
+						Shane!<br>
+					2.Who does rick hallucinate during the attack on Woodbury?<br>
+						Shane!<br>
+					3.Who were Michonne’s walker pets?<br>
+						Her boyfriend and his friend!<br>
 					4.What is Carl looking at right before he gets shot in Season 2?<br>
-						A deer<br>
+						A deer!<br>
 					5.What word does Morgan write over and over in Season 3?<br>
-						Clear<br>
+						Clear!<br>
 					6.What is the name of the Governor’s daughter?<br>
-						Penny<br>
+						Penny!<br>
 					7.Who claims he’s worked on the Human Genome Project?<br>
-						Eugene<br>
+						Eugene!<br>
 					8.What does Lori want want Glenn to get her at the Pharmacy in Season 2?<br>
-						Pregnancy Test<br>
+						Pregnancy Test!<br>
 					9.Who Performs a C-Section on Lori?<br>
-						Maggie<br>
+						Maggie!<br>
 					10.What weapon killed Glenn?<br>
-						Baseball bat</p>
+						Baseball bat!</p>
 			</div>
 		</div>
 	</div>
